third_party/rust/chromium_crates_io/vendor/proc-macro-error2-v2/tests/ui/dummy.stderr
error: set_dummy test
 --> tests/ui/dummy.rs:8:8
  |
8 | dummy!(need_default);
  |        ^^^^^^^^^^^^
